ADD forgotten link

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,6 +21,7 @@
     note = {Joint first authorship},
     website = {https://www.automl.org/automated-algorithm-design/dac/},
     code = {https://github.com/ndangtt/LeadingOnesDAC},
+    blog = {https://andrebiedenkapp.github.io/blog/2022/gecco/},
     selected = {true},
     bibtex_show={true},
     abstract = {It has long been observed that the performance of evolutionary algorithms and other randomized search heuristics can benefit from a non-static choice of the parameters that steer their optimization behavior. Mechanisms that identify suitable configurations on the fly ("parameter control") or via a dedicated training process ("dynamic algorithm configuration") are therefore an important component of modern evolutionary computation frameworks. Several approaches to address the dynamic parameter setting problem exist, but we barely understand which ones to prefer for which applications. As in classical benchmarking, problem collections with a known ground truth can offer very meaningful insights in this context. Unfortunately, settings with well-understood control policies are very rare.
