MAINT feedback by Nguyen

--- a/_posts/2022-05-21-gecco.md
+++ b/_posts/2022-05-21-gecco.md
@@ -119,9 +119,9 @@ Under the heading of *parameter control* (for an overview see <d-cite key="Doerr
 More importantly however, the community has provided various theoretical insights.
 
 In a similar vain to parameter control, the novel *dynamic algorithm configuration (DAC)* <d-cite key="biedenkapp-ecai20"></d-cite> framework proposes
-to learn parameter adaptation policies in a dedicated offline learning phase. Once a policy was learned, it can then be used to adapt an algorithms
-parameter on a variety of problem instances. Still, the field is very young and there is much to learn.
-In our recently accepted GECCO paper *[Theory-Inspired Parameter Control Benchmarks for Dynamic Algorithm Configuration](https://andrebiedenkapp.github.io/assets/pdf/22-gecco.pdf)*
+to learn parameter adaptation policies in a dedicated offline learning phase. Once a policy was learned, it can then be used to adapt algorithm
+parameters on a variety of problem instances. Still, the field is very young and there is much to learn.
+In our recently accepted GECCO paper *[<font color="lightblue">Theory-Inspired Parameter Control Benchmarks for Dynamic Algorithm Configuration</font>](https://andrebiedenkapp.github.io/assets/pdf/22-gecco.pdf)*
 builds on such insights of the parameter control community to build benchmarks which can be used to evaluate DAC methods and policies.
 
 ## Why RLS on LeadingOnes?
@@ -158,7 +158,7 @@ def RLS(problem_dimension, max_budget):
     </p>
 </div> 
 The algorithm starts from a randomly initialized bitstring and in each iteration randomly flips <d-code language="python">num_bits_to_flip</d-code>.
-The so created new solution candidate is compared to the old one. If it improves the performance it is kept, if not it is discarded.
+The so created new solution candidate is compared to the old one. The old one is replaced by the new one if the latter one is not worse than the former one.
 At the top of this post you can find a working implementation of this setup where you are in charge of setting the number of bits to flip.
 If you've played around with this setting a bit, you might have noticed a few things:
 
@@ -289,6 +289,6 @@ We hope that our work is the first of many exchanges of benchmarks between the p
 communities. With the growing literature on parameter control and its theoretical analysis we hope to provide other use-cases
 with a known ground truth.
 
-Our code and data are publicly available at [https://github.com/ndangtt/LeadingOnesDAC](https://github.com/ndangtt/LeadingOnesDAC)
+Our code and data are publicly available at <span style="color:blue">[<font color="lightblue">https://github.com/ndangtt/LeadingOnesDAC</font>](https://github.com/ndangtt/LeadingOnesDAC)</span>
 and the benchmark has recently been merged into DACBench.
 For feedback or questions, feel free to reach out to us.
