--- a/_posts/2022-05-21-gecco.md
+++ b/_posts/2022-05-21-gecco.md
@@ -51,7 +51,7 @@ We are using [pyscript](https://pyscript.net/) for the example below. Loading mi
 [//]: # (If you are interested in correctly adding dark mode support for distill, please open [a discussion]&#40;https://github.com/alshedivat/al-folio/discussions&#41; and let us know.)
 
 [//]: # (Custom HTML to get buttons for the python script running)
-<div id="pyexample">
+<div id="pyexample"  style="border: 2px solid #ccc !important; border-radius: 5px; padding: 5px 5px 5px 5px;">
     <py-script src="{{ '/assets/python_scripts/2022-05-21-gecco/simple_plot.py' | relative_url }}"></py-script>
     <canvas id="envcanvas" height="20" style="background-color: black; alignment: center; width: 100%">
     Loading...
@@ -176,7 +176,7 @@ Thus, if our current solution has fitness $\color{gray}0$ (i.e., no leading ones
 If we only have one leading one, we should flip exactly $\color{gray}\lfloor n/2\rfloor$ bits, and so on.
 Let's compare this optimal policy to static ones:
 
-<div id="pyexample-comparison">
+<div id="pyexample-comparison" style="border: 2px solid #ccc !important; border-radius: 5px; padding: 5px 5px 5px 5px;">
     <py-script src="{{ '/assets/python_scripts/2022-05-21-gecco/comparison_leading_ones_full.py' | relative_url }}"></py-script>
     <div style="font-style: oblique; font-weight: bold">Optimal Policy:</div>
     <canvas id="comparison-canvas-optimal" height="20" style="background-color: black; alignment: center; width: 100%">
@@ -236,6 +236,11 @@ Let's compare this optimal policy to static ones:
             Number of bitflips: <output>1</output>
         </span>
     </div>
+</div>
+
+<div class="figcaption">
+    <p>
+    </p>
 </div>
 
 We can see that the optimal policy is quite a bit faster at solving the LeadingOnes example.
