--- a/_posts/2022-05-21-gecco.md
+++ b/_posts/2022-05-21-gecco.md
@@ -178,7 +178,8 @@ Let's compare this optimal policy to static ones:
 
 <div id="pyexample-comparison" style="border: 2px solid #ccc !important; border-radius: 5px; padding: 5px 5px 5px 5px;">
     <py-script src="{{ '/assets/python_scripts/2022-05-21-gecco/comparison_leading_ones_full.py' | relative_url }}"></py-script>
-    <div style="font-style: oblique; font-weight: bold">Optimal Policy:</div>
+    <div style="font-style: oblique; font-weight: bold; display: inline-block">Optimal Policy:</div> 
+    <div style="display: inline-block">$\color{gray}\pi_{\text{opt}}($<div style="display: inline-block" id="opt-f-val">?</div>$\color{gray})\mapsto$ </div><div id="r-comparison-optimal" style="display: inline-block">?</div>
     <canvas id="comparison-canvas-optimal" height="20" style="background-color: black; alignment: center; width: 100%">
     Loading...
     </canvas>
@@ -188,7 +189,6 @@ Let's compare this optimal policy to static ones:
             <div style="display: inline-block">Steps Taken: </div><div id="timdiv-comparison-optimal" style="display: inline-block; margin-right: 10px">0</div>
             <div style="display: inline-block">#Solved: </div><div id="solved-comparison-optimal" style="display: inline-block; margin-right: 10px">0</div>
             <div style="display: inline-block">$\color{gray}\mu_{\text{steps}}$: </div><div id="avg-comparison-optimal" style="display: inline-block; margin-right: 10px">0</div>
-            <div style="display: inline-block">$\color{gray}\pi_{\text{opt}}($<div style="display: inline-block" id="opt-f-val">?</div>$\color{gray})\mapsto$ </div><div id="r-comparison-optimal" style="display: inline-block">?</div>
         </span>
     </div>
     <div style="font-style: oblique; font-weight: bold">Static Policy:</div>
