MAINT feedback by Martin

--- a/_posts/2022-05-21-gecco.md
+++ b/_posts/2022-05-21-gecco.md
@@ -138,7 +138,7 @@ This was not possible for prior DAC benchmarks <d-cite key="eimer-ijcai21"></d-c
 ### A Short Primer on LeadingOnes and RLS
 If you are already familiar with the LeadingOnes problem you can skip this short introduction.
 LeadingOnes is perfectly named.
-For a bitstring of length $\color{gray}n$, the LeadingOnes optimization problem is to flip as few bits as possible to maximize the
+For a bitstring of length $\color{gray}n$, the LeadingOnes problem is to maximize the
 number of uninterrupted leading ones in the bitsring.
 
 There are a variety of algorithms one could use for solving LeadingOnes. Here, we chose to use $\color{gray}(1+1)$RLS.
@@ -159,10 +159,11 @@ def RLS(problem_dimension, max_budget):
 </div> 
 The algorithm starts from a randomly initialized bitstring and in each iteration randomly flips <d-code language="python">num_bits_to_flip</d-code>.
 The so created new solution candidate is compared to the old one. The old one is replaced by the new one if the latter one is not worse than the former one.
-At the top of this post you can find a working implementation of this setup where you are in charge of setting the number of bits to flip.
+When using an algorithm for solving the LeadingOnes problem, we are interested in setting the algorithm up such that we solve the problem using as few function evaluations as possible, or in other words in as few iterations as possible.
+At the top of this post you can find a working implementation of this setup where you are in charge of setting the number of bits to flip in each iteration.
 If you've played around with this setting a bit, you might have noticed a few things:
 
-* A too high number of bits becomes detrimental the more leading ones we have.
+* A too high number of bits to flip becomes detrimental the more leading ones we have.
 * Always only flipping one bit is a valid strategy but might take a long time (depending on the initialization).
 * Decreasing the number of bits to flip over time fairly reliably reduces the required running time.
 
@@ -244,7 +245,7 @@ Let's compare this optimal policy to static ones:
 </div>
 
 We can see that the optimal policy is quite a bit faster at solving the LeadingOnes example.
-However, what about policies that are restricted and can not choose from all values in $\color{gray}\left[1,\ldots,n\right]$?
+However, what about policies that are restricted and cannot choose from all values in $\color{gray}\left[1,\ldots,n\right]$?
 In our paper, we present a method to compute the optimal policy for any such restricted choice.
 In essence, we can use the probability of improvement as defined above and only need to compare the probability of consecutive 
 elements<d-footnote>We assume the portfolio is always sorted.</d-footnote> of the portfolio.
