FIX render issue of python code

--- a/_posts/2022-05-21-gecco.md
+++ b/_posts/2022-05-21-gecco.md
@@ -143,7 +143,7 @@ number of uninterrupted leading ones in the bitsring.
 
 There are a variety of algorithms one could use for solving LeadingOnes. Here, we chose to use $\color{gray}(1+1)$RLS.
 The pseudo code for this is:
-<d-code language="python" block id="RLSpseudo">
+{% highlight Python %}
 def RLS(problem_dimension, max_budget):
     partial_sol = numpy.random.choice(2, problem_dimension)
     for t in range(max_budget):
@@ -152,7 +152,7 @@ def RLS(problem_dimension, max_budget):
         new_partial_sol = flip(partial_sol, num_bits_to_flip)
         if fitness(new_partial_sol) >= fitness(partial_sol):
             partial_sol = new_partial_sol
-</d-code>
+{% endhighlight %}
 <div class="figcaption">
     <p>Algorithm 1: Pseudocode for ${\color{gray}(1+1)}$RLS
     </p>
