ADD TempoRL post

--- a/_posts/2022-05-21-gecco.md
+++ b/_posts/2022-05-21-gecco.md
@@ -9,15 +9,19 @@ authors:
     affiliations:
       name: University of Freiburg
   - name: Nguyen Dang
+    url: https://risweb.st-andrews.ac.uk/portal/en/persons/nguyen-thi-thanh-dang(5c6b63c1-b66c-420e-a55f-08b347ea3262).html
     affiliations:
       name: University of St. Andrews
   - name: Martin S. Krejca
+    url: https://webia.lip6.fr/~krejca/index.html
     affiliations:
       name: Sorbonne Université, CNRS, LIP6
   - name: Frank Hutter
+    url: https://ml.informatik.uni-freiburg.de/profile/hutter/
     affiliations:
-      name: University of Freiburg
+      name: University of Freiburg, BCAI
   - name: Carola Doerr
+    url: http://www-ia.lip6.fr/~doerr/index.html
     affiliations:
       name: Sorbonne Université, CNRS, LIP6
 
@@ -45,7 +49,7 @@ toc:
 ---
 
 **NOTE:**
-We are using [pyscript](https://pyscript.net/) for the example below. Loading might take a bit longer.
+We are using [<font color="lightblue">pyscript</font>](https://pyscript.net/) for the example below. Loading might take a bit longer.
 
 [//]: # (Citations, footnotes, and code blocks do not display correctly in the dark mode since distill does not support the dark mode by default.)
 [//]: # (If you are interested in correctly adding dark mode support for distill, please open [a discussion]&#40;https://github.com/alshedivat/al-folio/discussions&#41; and let us know.)
