--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,26 +1,6 @@
 ---
 ---
 
-@article{adriaens-arxiv22a,
-    title = {Automated Dynamic Algorithm Configuration},
-    author = {Steven Adriaensen and André Biedenkapp and Gresa Shala and Noor Awad and Theresa Eimer and Marius Lindauer and Frank Hutter},
-    year = {2022},
-    journal = {arXiv:2205.13881 [cs.AI]},
-    bibtex_show={true},
-    arxiv = {arXiv:2205.13881},
-    abstract = {The performance of an algorithm often critically depends on its parameter configuration. While a variety of automated algorithm configuration methods have been proposed to relieve users from the tedious and error-prone task of manually tuning parameters, there is still a lot of untapped potential as the learned configuration is static, i.e., parameter settings remain fixed throughout the run. However, it has been shown that some algorithm parameters are best adjusted dynamically during execution, e.g., to adapt to the current part of the optimization landscape. Thus far, this is most commonly achieved through hand-crafted heuristics. A promising recent alternative is to automatically learn such dynamic parameter adaptation policies from data. In this article, we give the first comprehensive account of this new field of automated dynamic algorithm configuration (DAC), present a series of recent advances, and provide a solid foundation for future research in this field. Specifically, we (i) situate DAC in the broader historical context of AI research; (ii) formalize DAC as a computational problem; (iii) identify the methods used in prior-art to tackle this problem; (iv) conduct empirical case studies for using DAC in evolutionary optimization, AI planning, and machine learning.}
-}
-
-@article{benjamins-arxiv22a,
-    title = {Contextualize Me – The Case for Context in Reinforcement Learning},
-    author = {Carolin Benjamins and Theresa Eimer and Frederik Schubert and Aditya Mohan and André Biedenkapp and Bodo Rosenhan and Frank Hutter and Marius Lindauer},
-    year = {2022},
-    journal = {arXiv:2202.04500},
-    bibtex_show={true},
-    arxiv = {arXiv:2202.04500},
-    abstract = {While Reinforcement Learning (RL) has made great strides towards solving increasingly complicated problems, many algorithms are still brittle to even slight changes in environments. Contextual Reinforcement Learning (cRL) provides a theoretical framework to model such changes in a principled manner, thereby enabling flexible, precise and interpretable task specification and generation. Thus, cRL is an important formalization for studying generalization in RL. In this work, we reason about solving cRL in theory and practice. We show that theoretically optimal behavior in contextual Markov Decision Processes requires explicit context information. In addition, we empirically explore context-based task generation, utilizing context information in training and propose cGate, our state-modulating policy architecture. To this end, we introduce the first benchmark library designed for generalization based on cRL extensions of popular benchmarks, CARL. In short: Context matters! }
-}
-
 @inproceedings{biedenkapp-gecco22a,
     title = {Theory-inspired Parameter Control Benchmarks for Dynamic Algorithm Configuration},
     author = {André Biedenkapp and Nguyen Dang and Martin S. Krejca and Frank Hutter and Carola Doerr},
@@ -38,6 +18,44 @@
     One of the few exceptions for which we know which parameter settings minimize the expected runtime is the LeadingOnes problem. We extend this benchmark by analyzing optimal control policies that can select the parameters only from a given portfolio of possible values. This also allows us to compute optimal parameter portfolios of a given size. We demonstrate the usefulness of our benchmarks by analyzing the behavior of the DDQN reinforcement learning approach for dynamic algorithm configuration.}
 }
 
+@article{parker-holder-jair22a,
+    title = {Automated Reinforcement Learning (AutoRL): A Survey and Open Problems},
+    author = {Jack Parker-Holder and Raghu Rajan and Xingyou Song and André Biedenkapp and Yingjie Miao and Theresa Eimer and Baohe Zhang and Vu Nguyen and Roberto Calandra and Aleksandra Faust and Frank Hutter and Marius Lindauer},
+    year = {2022},
+    bibtex_show={true},
+    journal = {Journal of Artificial Intelligence Research (JAIR)},
+    pages = {517-568},
+    volume = {74},
+    arxiv = {arXiv:2201.03916},
+    doi = {10.1613/jair.1.13596},
+    pdf = {22-JAIR-AutoRL.pdf},
+    selected = {true},
+    abstract = {The combination of Reinforcement Learning (RL) with deep learning has led to a series of impressive feats, with many believing (deep) RL provides a path towards generally capable agents. However, the success of RL agents is often highly sensitive to design choices in the training process, which may require tedious and error-prone manual tuning. This makes it challenging to use RL for new problems, while also limits its full potential. In many other areas of machine learning, AutoML has shown it is possible to automate such design choices and has also yielded promising initial results when applied to RL. However, Automated Reinforcement Learning (AutoRL) involves not only standard applications of AutoML but also includes additional challenges unique to RL, that naturally produce a different set of methods. As such, AutoRL has been emerging as an important area of research in RL, providing promise in a variety of applications from RNA design to playing games such as Go. Given the diversity of methods and environments considered in RL, much of the research has been conducted in distinct subfields, ranging from meta-learning to evolution. In this survey we seek to unify the field of AutoRL, we provide a common taxonomy, discuss each area in detail and pose open problems which would be of interest to researchers going forward.}
+}
+
+@article{adriaens-arxiv22a,
+    title = {Automated Dynamic Algorithm Configuration},
+    author = {Steven Adriaensen and André Biedenkapp and Gresa Shala and Noor Awad and Theresa Eimer and Marius Lindauer and Frank Hutter},
+    year = {2022},
+    journal = {arXiv:2205.13881 [cs.AI]},
+    bibtex_show={true},
+    arxiv = {arXiv:2205.13881},
+    website = {https://www.automl.org/automated-algorithm-design/dac/},
+    code = {https://github.com/automl/2022_JAIR_DAC_experiments},
+    abstract = {The performance of an algorithm often critically depends on its parameter configuration. While a variety of automated algorithm configuration methods have been proposed to relieve users from the tedious and error-prone task of manually tuning parameters, there is still a lot of untapped potential as the learned configuration is static, i.e., parameter settings remain fixed throughout the run. However, it has been shown that some algorithm parameters are best adjusted dynamically during execution, e.g., to adapt to the current part of the optimization landscape. Thus far, this is most commonly achieved through hand-crafted heuristics. A promising recent alternative is to automatically learn such dynamic parameter adaptation policies from data. In this article, we give the first comprehensive account of this new field of automated dynamic algorithm configuration (DAC), present a series of recent advances, and provide a solid foundation for future research in this field. Specifically, we (i) situate DAC in the broader historical context of AI research; (ii) formalize DAC as a computational problem; (iii) identify the methods used in prior-art to tackle this problem; (iv) conduct empirical case studies for using DAC in evolutionary optimization, AI planning, and machine learning.}
+}
+
+@article{benjamins-arxiv22a,
+    title = {Contextualize Me – The Case for Context in Reinforcement Learning},
+    author = {Carolin Benjamins and Theresa Eimer and Frederik Schubert and Aditya Mohan and André Biedenkapp and Bodo Rosenhan and Frank Hutter and Marius Lindauer},
+    year = {2022},
+    journal = {arXiv:2202.04500},
+    bibtex_show={true},
+    arxiv = {arXiv:2202.04500},
+    code = {https://github.com/automl/CARL/tree/icml_2022},
+    abstract = {While Reinforcement Learning (RL) has made great strides towards solving increasingly complicated problems, many algorithms are still brittle to even slight changes in environments. Contextual Reinforcement Learning (cRL) provides a theoretical framework to model such changes in a principled manner, thereby enabling flexible, precise and interpretable task specification and generation. Thus, cRL is an important formalization for studying generalization in RL. In this work, we reason about solving cRL in theory and practice. We show that theoretically optimal behavior in contextual Markov Decision Processes requires explicit context information. In addition, we empirically explore context-based task generation, utilizing context information in training and propose cGate, our state-modulating policy architecture. To this end, we introduce the first benchmark library designed for generalization based on cRL extensions of popular benchmarks, CARL. In short: Context matters! }
+}
+
 @article{lindauer-jmlr22a,
     title = {SMAC3: A Versatile Bayesian Optimization Package for Hyperparameter Optimization},
     author = {Marius Lindauer and Katharina Eggensperger and Matthias Feurer and André Biedenkapp and Difan Deng and Carolin Benjamins and Tim Ruhkopf and René Sass and Frank Hutter},
@@ -52,17 +70,6 @@
     code = {https://github.com/automl/SMAC3},
     pdf = {21-0888.pdf},
     abstract = {Algorithm parameters, in particular hyperparameters of machine learning algorithms, can substantially impact their performance. To support users in determining well-performing hyperparameter configurations for their algorithms, datasets and applications at hand, SMAC3 offers a robust and flexible framework for Bayesian Optimization, which can improve performance within a few evaluations. It offers several facades and pre-sets for typical use cases, such as optimizing hyperparameters, solving low dimensional continuous (artificial) global optimization problems and configuring algorithms to perform well across multiple problem instances. The SMAC3 package is available under a permissive BSD-license at https://github.com/automl/SMAC3. }
-}
-
-@article{parker-holder-arxiv21a,
-    title = {Automated Reinforcement Learning (AutoRL): A Survey and Open Problems},
-    author = {Jack Parker-Holder and Raghu Rajan and Xingyou Song and André Biedenkapp and Yingjie Miao and Theresa Eimer and Baohe Zhang and Vu Nguyen and Roberto Calandra and Aleksandra Faust and Frank Hutter and Marius Lindauer},
-    year = {2022},
-    bibtex_show={true},
-    journal = {arXiv:2201.03916},
-    arxiv = {arXiv:2201.03916},
-    selected = {true},
-    abstract = {The combination of Reinforcement Learning (RL) with deep learning has led to a series of impressive feats, with many believing (deep) RL provides a path towards generally capable agents. However, the success of RL agents is often highly sensitive to design choices in the training process, which may require tedious and error-prone manual tuning. This makes it challenging to use RL for new problems, while also limits its full potential. In many other areas of machine learning, AutoML has shown it is possible to automate such design choices and has also yielded promising initial results when applied to RL. However, Automated Reinforcement Learning (AutoRL) involves not only standard applications of AutoML but also includes additional challenges unique to RL, that naturally produce a different set of methods. As such, AutoRL has been emerging as an important area of research in RL, providing promise in a variety of applications from RNA design to playing games such as Go. Given the diversity of methods and environments considered in RL, much of the research has been conducted in distinct subfields, ranging from meta-learning to evolution. In this survey we seek to unify the field of AutoRL, we provide a common taxonomy, discuss each area in detail and pose open problems which would be of interest to researchers going forward.}
 }
 
 @inproceedings{benjamins-arxiv21a,
