ADD new paper on DAC 4 AI Planning

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@inproceedings{biedenkapp-prl22a,
+title = {Learning Domain-Independent Policies for Open List Selection},
+author = {André Biedenkapp and David Speck and Silvan Sievers and Frank Hutter and Marius Lindauer and Jendrik Seipp},
+year = {2022},
+booktitle = {Workshop on Bridging the Gap Between AI Planning and Reinforcement Learning (PRL @ ICAPS'22)},
+bibtex_show={true},
+pdf={22-PRL-DAC4AIPlanning.pdf}
+}
+
 @inproceedings{biedenkapp-gecco22a,
     title = {Theory-inspired Parameter Control Benchmarks for Dynamic Algorithm Configuration},
     author = {André Biedenkapp and Nguyen Dang and Martin S. Krejca and Frank Hutter and Carola Doerr},
