--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
     arxiv = {arXiv:2202.03259},
     booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference ({GECCO}'22)},
     pdf = {22-gecco.pdf},
-    note = {Joint first authorship},
+    note = {Joint first authorship, <a href="https://gecco-2022.sigevo.org/Best-Paper-Nominations">Nominated for the best paper award</a>},
     website = {https://www.automl.org/automated-algorithm-design/dac/},
     code = {https://github.com/ndangtt/LeadingOnesDAC},
     blog = {https://andrebiedenkapp.github.io/blog/2022/gecco/},
