--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,8 @@
               propose to use dynamic algorithm configuration to learn such policies in a principled and data-driven manner. On the learning side, we show how to train a reinforcement learning agent
               over several heterogeneous environments, aiming at zero-shot generalization to new related domains. On the planning side, our experimental results show that the trained policies often
               reach the performance of LAMA, and sometimes even perform better. Furthermore, our analysis of different policies shows that prioritizing states reached via preferred operators
-              is crucial, explaining the strong performance of LAMA.}
+              is crucial, explaining the strong performance of LAMA.},
+    talk = {https://youtu.be/RgyYaJIr4p8}
 }
 
 @inproceedings{biedenkapp-gecco22a,
