Update DeepCAVE and FIX bibtex entries not properly rendering for some excluded keywords

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,11 @@
 ---
 ---
 
-@article{sass-arxiv22a,
+@inproceedings{sass-realml22a,
     title = {DeepCAVE: An Interactive Analysis Tool for Automated Machine Learning},
     author = {René Sass and Eddie Bergman and André Biedenkapp and Frank Hutter and Marius Lindauer},
     year = {2022},
-    journal = {arXiv:2206.03493 [cs.LG]},
+    booktitle = {Workshop on Adaptive Experimental Design and Active Learning in the Real World (ReALML@ICML'22)},
     bibtex_show={true},
     arxiv = {arXiv:2206.03493},
     website = {https://www.automl.org/ixautoml/deepcave/},
@@ -19,7 +19,7 @@
     title = {Learning Domain-Independent Policies for Open List Selection},
     author = {André Biedenkapp and David Speck and Silvan Sievers and Frank Hutter and Marius Lindauer and Jendrik Seipp},
     year = {2022},
-    booktitle = {Workshop on Bridging the Gap Between AI Planning and Reinforcement Learning (PRL @ ICAPS'22)},
+    booktitle = {Workshop on Bridging the Gap Between AI Planning and Reinforcement Learning (PRL@ICAPS'22)},
     bibtex_show={true},
     pdf={22-PRL-DAC4AIPlanning.pdf},
     abstract={Since its proposal over a decade ago, LAMA has been considered one of the best-performing satisficing classical planners. Its key component is heuristic search with multiple open
