--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,7 +38,7 @@
     arxiv = {arXiv:2202.03259},
     booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference ({GECCO}'22)},
     pdf = {22-gecco.pdf},
-    note = {Joint first authorship, <a href="https://gecco-2022.sigevo.org/Best-Paper-Nominations">Nominated for the best paper award</a>},
+    note = {Joint first authorship: André Biedenkapp \& Nguyen Dang \& Martin S. Krejca, <a href="https://gecco-2022.sigevo.org/Best-Paper-Nominations">Nominated for the best paper award</a>},
     website = {https://www.automl.org/automated-algorithm-design/dac/},
     code = {https://github.com/ndangtt/LeadingOnesDAC},
     blog = {https://andrebiedenkapp.github.io/blog/2022/gecco/},
@@ -146,7 +146,7 @@
     year =         "2021",
     publisher =    "AAAI Press",
     pages =        "597--605",
-    note =         "Joint first authorship",
+    note =         "Joint first authorship: David Speck \& André Biedenkapp",
     website =      "https://www.automl.org/automated-algorithm-design/dac/dynamic-algorithm-configuration-for-ai-planning/",
     talk =         "https://icaps21.icaps-conference.org/exhibition/index.html?channel=152",
     abstract =     "A key challenge in satisficing planning is to use multiple
@@ -335,7 +335,7 @@
     year =         "2020",
     talk =         "https://icaps21.icaps-conference.org/exhibition/index.html?channel=152",
     pages =        "61--69",
-    note =         "Joint first authorship",
+    note =         "Joint first authorship: David Speck \& André Biedenkapp",
     abstract =     "A key challenge in satisficing planning is to use multiple
                   heuristics within one heuristic search. An aggregation of
                   multiple heuristic estimates, for example by taking the
@@ -372,6 +372,7 @@
     talk = {https://drive.google.com/file/d/1bhrbdUu-U76iJJtKYhPV3sdo4nI6N6XO/view},
     blog = {https://www.automl.org/learning-step-size-adaptation-in-cma-es/},
     pdf = {20-PPSN-LTO-CMA.pdf},
+    note = {Joint first authorship: Gresa Shala \& André Biedenkapp},
     poster = {20-PPSN-LTO-CMA-poster.pdf},
     abstract = {An algorithm’s parameter setting often affects its ability to
     solve a given problem, e.g., population-size, mutation-rate or crossover-
